Refactor primitives and AIS integration